// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom: ol 1`] = `
<ol
  class="yozora-list custom-list-item"
  start="3"
  style="color:orange"
>
  <li>
    apple
  </li>
  <li>
    banana
  </li>
  <li>
    cat
  </li>
</ol>
`;

exports[`snapshot custom: ul 1`] = `
<ul
  class="yozora-list custom-list-item"
  style="color:orange"
>
  <li>
    apple
  </li>
  <li>
    banana
  </li>
  <li>
    cat
  </li>
</ul>
`;

exports[`snapshot default: ol 1`] = `
<ol
  class="yozora-list"
  start="3"
>
  <li>
    apple
  </li>
  <li>
    banana
  </li>
  <li>
    cat
  </li>
</ol>
`;

exports[`snapshot default: ul 1`] = `
<ul
  class="yozora-list"
>
  <li>
    apple
  </li>
  <li>
    banana
  </li>
  <li>
    cat
  </li>
</ul>
`;
